--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "chalk": "^1.1.1",
+    "chalk": "~5.0.1",
     "file-sync-cmp": "^0.1.0"
   },
   "devDependencies": {
